@startuml

/' SPDX-License-Identifier: GPL-3.0-or-later OR Commercial '/
/' Copyright (c) 2026 Dmitrii Kosenok '/

/' This file is part of EmbeddedCV. '/

/' It is dual-licensed under the terms of the GNU General Public License v3 '/
/' and a commercial license. You can choose the license that fits your needs. '/
/' For details, see the LICENSE file in the root of the repository. '/

left to right direction
/' Objects '/
namespace mini_server {
	class Encapsulation {
		+{static} getHeader(std::vector<char>& frame) : T*
		+{static} getBody(const std::vector<char>& frame) : char*
		+{static} encapsulate(const void* buffer, size_t bufferSize, const T& header) : 
std::vector<char>
	}
	abstract class HandlerInterface {
		+{abstract} handle(int socket, const std::string& in, std::string& out) : void
	}
	class IpcServer {
		+isRunning() : bool
		+getClientsCount() : size_t {query}
		+createFrame(const void* buffer, size_t bufferSize, unsigned long expire, const 
IpcServer::MessageTypeEnum& type) : std::vector<char> {query}
		+getExpire(unsigned long ttl, long frameCreatedAt) : unsigned long {query}
		+broadcast(const std::string& message) : void
		+broadcast(const void* buffer, size_t bufferSize, unsigned long ttl, MessageType
Enum type) : void
		+runClient() : void
		+send(int s, const std::string& message, unsigned long ttl, MessageTypeEnum type
) : void
		+send(int s, const void* buffer, size_t bufferSize, unsigned long ttl, MessageTy
peEnum type) : void
		+sendFrame(int s, const std::vector<char>& frame) : void
		+{static} sendingThread(int interactionSocket, IpcServer* server, int threadId) 
: void
		+serve() : void
		+setOnClose(CloseHandler onClose) : void
		+setOnMessage(StringMessageHandler onMessage) : void
		+setOnMessage(BinaryMessageHandler onMessage) : void
		+setOnReconnect(ReconnectHandler handler) : void
		+setSocket(int _socket) : void
		+stop() : void
	}
	class SocketFactory {
		+{static} createClientSocket(const std::string& name) : int
		+{static} createServerSocket(const std::string& name, int maxConnections) : int
	}
	enum IpcServer::MessageTypeEnum {
		TYPE_ACK
		TYPE_CONTROL
		TYPE_MAT
		TYPE_TELEMETRY
	}
	class IpcServer::MessageHeader {
		+type : MessageTypeEnum
		+magick : unsigned int
		+size : unsigned int
		+expire : unsigned long
	}
	class IpcServer::SendingTask {
		+done : std::atomic<bool>
		+ready : std::atomic<bool>
		+buffer : std::vector<char>
	}
}
/' Inheritance relationships '/
/' Aggregation relationships '/
/' Dependency relationships '/
mini_server.IpcServer <.. mini_server.IpcServer
mini_server.IpcServer <.. mini_server.IpcServer
/' Nested objects '/
mini_server.IpcServer +-- mini_server.IpcServer.MessageHeader
mini_server.IpcServer +-- mini_server.IpcServer.MessageTypeEnum
mini_server.IpcServer +-- mini_server.IpcServer.SendingTask
@enduml
